--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div v-if="tabSelect === 'auto'" class="input--group">
                     <label for="bussinessAcount">Select Business Account</label>
                     <select class="input" v-model="businessAccountSelected" @change="enablePixelAccountInput" ref="businessAccountSelect">
-                        <option value="" selected>Select your Businiess Account</option>
+                        <option value="" disabled selected>Select your Businiess Account</option>
                         <option v-for="item in listBusinessAccount" :value="item.id">{{ item.id }} - {{ item.name }}</option>
                     </select>
                 </div>
@@ -56,25 +56,39 @@
                         <option v-for="item in listPixelAccountByBusinessId" :value="item.id">{{ item.id }} - {{ item.parentId }} - {{ item.name }}</option>
                     </select>
                 </div>
-                <div v-if="tabSelect === 'manual'" class="input--group" >
-                    <label class="input__label" for="pixel">Name this pixel</label>
-                    <input ref="inputNamePixel" type="text" class="input" placeholder="Input your pixel name"/>
-                </div>
-                <div v-if="tabSelect === 'manual'" class="input--group" >
-                    <label class="input__label" for="pixel">Enter Facebook Pixel ID</label>
-                    <input ref="inputFBPixelID" type="text" class="input" placeholder="Input your pixel id"/>
-                </div>
-                <div v-show="listPixelAccountByBusinessId.length == 0 && enableValidate" class="card card--small card--danger flex--start flex--gap-10">
+                <div v-if="tabSelect === 'auto'" v-show="listPixelAccountByBusinessId.length == 0 && enableCheckFormAuto" class="card card--small card--danger flex--start flex--gap-10">
                     <img src="./Assets/img/delete.svg" alt="delete">
                     <div class="card--column flex--gap-5 text--gray">
                         <p class="text--strong">Missing pixel</p>
                         <p class="text--small">You don't have any Facebook Pixels in this Business Account. Change Business Account or <a class="link text--small text--strong" href="/">Create New Facebook Pixel</a> first.</p>
                     </div>
                 </div>
+                <div v-if="tabSelect === 'manual'" class="input--group" >
+                    <label class="input__label" for="pixel">Name this pixel</label>
+                    <input v-model="namePixel" type="text" class="input" placeholder="Input your pixel name"/>
+                </div>
+                <div v-show="validateInputNamePixel == null && enableValidateFormManual" v-if="tabSelect === 'manual'"  class="card card--small card--danger flex--start flex--gap-10">
+                    <img src="./Assets/img/delete.svg" alt="delete">
+                    <div class="card--column flex--gap-5 text--gray">
+                        <p class="text--strong">Error</p>
+                        <p class="text--small">Name pixel must be character</p>
+                    </div>
+                </div>
+                <div v-if="tabSelect === 'manual'" class="input--group" >
+                    <label class="input__label" for="pixel">Enter Facebook Pixel ID</label>
+                    <input v-model="FBIDPixel" type="text" class="input" placeholder="Input your pixel id"/>
+                </div>
+                <div v-show="validateInputFBIDPIxel == null && enableValidateFormManual" v-if="tabSelect === 'manual'"   class="card card--small card--danger flex--start flex--gap-10">
+                    <img src="./Assets/img/delete.svg" alt="delete">
+                    <div class="card--column flex--gap-5 text--gray">
+                        <p class="text--strong">Error</p>
+                        <p class="text--small">Facebook Pixel ID must be Number</a></p>
+                    </div>
+                </div>
                 <div class="input--group">
                     <label class="input__label" for="Target">Target</label>
                     <select class="input">
-                        <option value="53425461676 - Rosy's Business">Entire page</option>
+                        <option value="">Entire page</option>
                     </select>
                 </div>
                 <div class="card card--small card--none-padding">
@@ -96,7 +110,7 @@
             </div>
             <footer class="card__footer">
                 <button class="btn text--strong" @click="resetForm">Cancel</button>
-                <button class="btn btn--primary text--strong full-width">Save</button>
+                <button class="btn btn--primary text--strong full-width" @click = "enableValidateManualForm">Save</button>
             </footer>
         </div>
     </div>
